--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ title: i talk too much - by Seth Etter
 
 		<header class="article-header">
       <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-      <p class="postcategories">{{ post.categories }}</p>
-		  <p class="postdate">{{ post.date | date: "%d %B %Y" }}</p>
+		  <p class="postdate">{{ post.date | date: "%d %B %Y" }} - Posted in: {{ post.categories.join(", ") }}</p>
 		</header>
 
 	</article>
