--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: i talk too much - by Seth Etter
 
 		<header class="article-header">
       <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-		  <p class="postdate">{{ post.date | date: "%d %B %Y" }} - Posted in: {% for category in post.categoris %} {{ category }}, {% endfor %}</p>
+		  <p class="postdate">{{ post.date | date: "%d %B %Y" }} - Posted in: {% for category in post.categoris %} {{ category[0] }}, {% endfor %}</p>
 		</header>
 
 	</article>
